--- a/intlphoneinput/src/main/res/values/attrs.xml
+++ b/intlphoneinput/src/main/res/values/attrs.xml
@@ -8,5 +8,7 @@
         <attr name="flagPaddingBottom" format="dimension" />
         <attr name="flagPaddingTop" format="dimension" />
         <attr name="textColorHint" format="color" />
+        <attr name="selectedCountryCodes" format="reference" />
+        <attr name="showRemainingCountries" format="boolean" />
     </declare-styleable>
 </resources>
