--- a/intlphoneinput/src/main/res/values/attrs.xml
+++ b/intlphoneinput/src/main/res/values/attrs.xml
@@ -10,5 +10,6 @@
         <attr name="textColorHint" format="color" />
         <attr name="selectedCountryCodes" format="reference" />
         <attr name="showRemainingCountries" format="boolean" />
+        <attr name="background" format="reference" />
     </declare-styleable>
 </resources>
