--- a/intlphoneinput/src/main/res/layout/intl_phone_input.xml
+++ b/intlphoneinput/src/main/res/layout/intl_phone_input.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:orientation="horizontal">
     <android.support.v7.widget.AppCompatSpinner
+        android:layout_centerVertical="true"
         android:layout_width="40dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/intl_phone_edit__country"
         android:dropDownWidth="350dp"
         android:background="@android:color/transparent" />
     <TextView
         tools:text="+1441"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/intl_phone_edit__country"
         android:id="@+id/intl_phone_edit__country_prefix"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.AppCompatEditText
+        tools:hint="(441) 370-1234"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/intl_phone_edit__country_prefix"
+        android:layout_alignBaseline="@id/intl_phone_edit__country_prefix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/intl_phone_edit__phone"
         android:lines="1"
-        android:textSize="@dimen/text_size_default"
         android:digits="0123456789+"
         android:inputType="phone" />
-</LinearLayout>
+</RelativeLayout>
